<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgd_gradient_red" >
    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/panel_1_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_user_ring" />
            <TextView
                android:id="@+id/panel_1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:text="@string/account_title"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/panel_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="#a92311"
            android:paddingBottom="7dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="7dp"
            android:textColor="#f9f9f9"
            android:textSize="15sp" >
            <TextView
                android:id="@+id/account"
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:text="@string/account" />
            <TextView
                android:id="@+id/account_id"
                style="@style/SettingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/account"
                android:layout_alignParentRight="true"
                android:text="default" />
            <ImageView
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/account"
                android:layout_marginBottom="7dp"
                android:background="@drawable/bgd_divider" />
            <TextView
                android:id="@+id/change_password"
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider1"
                android:layout_marginBottom="9dp"
                android:text="@string/change_password" />
            <ImageView
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/change_password"
                android:layout_marginBottom="7dp"
                android:background="@drawable/bgd_divider" />
            <TextView
                android:id="@+id/keep_logged_in_text"
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider2"
                android:layout_marginBottom="9dp"
                android:text="@string/keep_logged_in" />
            <CheckBox
                android:id="@+id/keep_logged_in"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/keep_logged_in_text"
                android:checked="true" />
            <ImageView
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/keep_logged_in_text"
                android:layout_marginBottom="7dp"
                android:background="@drawable/bgd_divider" />
            <TextView
                android:id="@+id/connection_testing"
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider3"
                android:layout_marginBottom="9dp"
                android:text="@string/connection_testing" />
            <ImageView
                android:id="@+id/clean_data_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/connection_testing"
                android:layout_marginBottom="7dp"
                android:background="@drawable/bgd_divider" />
            <TextView
                android:id="@+id/clean_data"
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/clean_data_view"
                android:text="@string/clean_data" />
            <TextView
                android:id="@+id/spaceUsage"
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/clean_data"
                android:text="@string/calculate_usage" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/panel_2_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_notif_ring" />
            <TextView
                android:id="@+id/panel_2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:text="@string/message_title"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/panel_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="#a92311"
            android:paddingBottom="7dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="7dp"
            android:textColor="#f9f9f9"
            android:textSize="15sp" >
            <TextView
                android:id="@+id/notify_me_text"
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:text="@string/message_notify" />
            <CheckBox
                android:id="@+id/notify_me"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/notify_me_text"
                android:checked="true" />
            <ImageView
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/notify_me_text"
                android:layout_marginBottom="7dp"
                android:background="@drawable/bgd_divider" />
            <TextView
                android:id="@+id/vibrate_text"
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider6"
                android:layout_marginBottom="7dp"
                android:text="@string/message_vibrate" />
            <CheckBox
                android:id="@+id/vibrate"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/vibrate_text"
                android:checked="true" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/panel_3_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_info_ring" />
            <TextView
                android:id="@+id/panel_3_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:text="@string/about_title"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/panel_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#a92311"
            android:paddingBottom="7dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="7dp"
            android:textColor="#f9f9f9"
            android:textSize="15sp" >
            <TextView
                android:id="@+id/about_us_text"
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:text="@string/about_app" />
            <Button
                android:id="@+id/about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:text="  >  "
                android:textColor="#f9f9f9"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/about_us_text"
                android:layout_marginBottom="7dp"
                android:background="@drawable/bgd_divider" />
            <TextView
                android:id="@+id/sign_out"
                style="@style/SettingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider8"
                android:layout_marginBottom="9dp"
                android:text="@string/exit" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>